syntax = "proto3";

package elys.perpetual;

import "gogoproto/gogo.proto";
import "elys/perpetual/params.proto";
import "elys/perpetual/pool.proto";
import "elys/perpetual/types.proto";

option go_package = "github.com/elys-network/elys/x/perpetual/types";

// GenesisState defines the perpetual module's genesis state.
message GenesisState {
           Params params            = 1 [(gogoproto.nullable) = false];
  repeated Pool   pool_list         = 2 [(gogoproto.nullable) = false];
  repeated MTP    mtp_list          = 3 [(gogoproto.nullable) = false];
  repeated string address_whitelist = 4;
}

